# GraphRender

./: .dockerignore  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  PROJECT_CONTEXT.md  README.md  RELEASE.md  SECURITY.md  SESSION_NOTES.md  THIRD_PARTY_NOTICES.md  docker-compose.yml  main.py  pyproject.toml
.github/: CODEOWNERS  branch-protection-main.json  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  gitleaks.yml  release.yml  test.yml
docs/adr/: 001-health-check-contract.md  002-dockerised-integration-testing.md
elkjson/maven-status/maven-compiler-plugin/compile/default-compile/: createdFiles.lst
examples/: defaults.json  input.json  sample0.json  sample2.json  sample2.layout.json  sample3.enriched.json  sample3.json  sample3.layout.json  udland.elk.json  udland.json  udland.layout.json
src/graphrender/: __init__.py  elk_graph_svg.py  graphrender.py  profile.py  server.py
src/graphrender/resources/: __init__.py  default_theme.css  elk_defaults.json
src/melk/: __init__.py  elk_graph_svg.py  elk_json_enrich.py  elk_json_layout.py  elk_model.py
src/melk/resources/: __init__.py  default_theme.css
tests/: __init__.py  helpers.py  test_cli_main.py  test_graphrender_core.py  test_graphrender_svg_output.py  test_icon_cache.py  test_profile_adapter.py  test_resources.py
tests/integration/: conftest.py  test_health.py  test_render.py
themes/: __init__.py  _variables.scss  theme.scss
