[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "melk"
version = "0.1.0"
description = "Render laid-out ELK JSON graphs to SVG with optional CSS/SCSS/SASS theming."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "svg.py>=1.0"
]
authors = [
    { name = "melk contributors" },
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
melk = [
    "resources/*",
]
